<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">INTIBIA™</string>
    <string name="external_title">Implant Tool Tunneling</string>
    <string name="itns_title">ITNS Interrogation</string>
    <string name="no_link_msg">Tablet and Wand communication Issue:Is the Wand on?</string>
    <string name="link_msg">Tablet communicating with Wand</string>
    <string name="all_btn_start">HOLD FOR TEST</string>
    <string name="itns_btn_interrogate">Interrogate</string>
    <string name="itns_btn_program">Program</string>
    <string name="all_yes">Yes</string>
    <string name="all_no">No</string>
    <string name="itns_newitns_title_msg">New ITNS detected</string>
    <string name="itns_newitns_msg">Interrogate implant to continue</string>
    <string name="itns_telem_fail_msg">Wand not communicating with ITNS</string>
    <string name="itns_telem_checkwand_msg">Reposition Wand over ITNS and try again</string>
    <string name="itns_resets_detected_msg">%d reset(s) were detected in the ITNS</string>
    <string name="itns_resets_continue_msg">Press Cancel or Clear to continue</string>
    <string name="itns_time_before_now_msg">Therapy must be programmed to start at least one hour after the current time</string>
    <string name="itns_time_after_7days_msg">Date and/or time must not be more than 7 days from now</string>
    <string name="itns_time_after_31days_msg">Date and/or time must not be more than 31 days from now"</string>
    <string name="itns_time_correct_msg">Please correct the date and/or time and try again</string>
    <string name="external_test_neuromodulation">Test Neuromodulation:</string>
    <string name="external_comm_error_title_msg">Communication error between Tablet and Wand</string>
    <string name="external_comm_error_msg">Press OK to continue</string>
    <string name="all_neuro_in_progress" tools:ignore="TypographyEllipsis">Neurostimulation in progress...</string>
    <string name="all_lead_i">Lead I:</string>
    <string name="all_lead_r">Lead R:</string>
    <string name="itns_model">Model:</string>
    <string name="itns_cell_v">Cell V:</string>
    <string name="itns_sn">SN:</string>
    <string name="itns_rrt">RRT:</string>
    <string name="itns_schedule">Schedule:</string>
    <string name="itns_date">Date:</string>
    <string name="itns_time">Time:</string>
    <string name="all_amplitude">Amplitude:</string>
    <string name="all_model_number_one">9C-680</string>
    <string name="all_model_number_two">9C-680E</string>
    <string name="all_model_number_three">CP-IN100</string>
    <string name="all_model_number_four">CP-IN101</string>
    <string name="all_cancel">Cancel</string>
    <string name="all_retry">Retry</string>
    <string name="all_ok">OK</string>
    <string name="all_clear">Clear</string>
    <string name="all_next">Next</string>
    <string name="all_back">Back</string>
    <string name="all_continue">Continue</string>
    <string name="about_title">Software versions</string>
    <string name="about_text">About</string>
    <string name="about_version">Software version 1.03\n\nColoplast Corp\n1601 West River Road North\nMinneapolis, MN 55411 USA\n\n+1 800 258 3476\nwww.coloplast.us</string>
    <string name="main_lowbat_title">Low Battery</string>
    <string name="main_lowbat_msg">Connect charger immediately</string>
    <string name="main_wand_error_title">Wand not responding</string>
    <string name="main_wand_error_msg">Please turn Wand OFF, then back ON, and try again</string>
    <string name="surgery">Surgery</string>
    <string name="clinic_visit">Clinic Visit</string>
    <string name="wand_not_comm">Tablet and Wand communication Issue:\nIs the Wand on?</string>
    <string name="wand_is_comm">Tablet communicating with Wand</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="amplitude">Amplitude</string>
    <string name="start_day_date">Start Day/Date</string>
    <string name="frequency">Frequency</string>
    <string name="time_of_day">Time of Day</string>
    <string name="warning">Warning</string>
    <string name="lead_r">Lead R</string>
    <string name="lead_i">Lead I</string>
    <string name="implant_serial">Implant Serial #</string>
    <string name="implant_model">Implant Model</string>
    <string name="interrogate">Interrogate</string>
    <string name="hold_to_deliver_neurostimulation">Hold to deliver neurostimulation</string>
    <string name="_1_5v">1.5V</string>
    <string name="off">Off</string>
    <string name="implant_battery">Implant Battery</string>
    <string name="software_version">Software Version</string>
    <string name="software_versions">Software Versions:</string>
    <string name="battery_replacement_time_rrt">Battery Replacement Time (RRT)</string>
    <string name="company_info">Coloplast Corporation\n<br />+1-800-258-3476 \n<br /></string>
    <string name="ifu_link"><b>IFU link: </b><href url="docshub.coloplast.com/ifus">docshub.coloplast.com/ifus Ref:  520500</href></string>
    <string name="company_address">1601 West River Road \nMinneapolis, MN 55411 \nUnited States of America</string>
    <string name="close_application">Close Application</string>
    <string name="reset_date_and_time">Reset Date and Time</string>
    <string name="set_language">Set Language</string>
    <string name="time">Time:</string>
    <string name="language">Language:</string>
    <string name="date">Date:</string>
    <string name="the_intibia_itns_reset_recently">The ITNS reset recently</string>
    <string name="the_intibia_itns_reset_recently_cv">The ITNS automatically reset since the last visit</string>
    <string name="the_intibia_itns_off">The ITNS is in \'OFF\'</string>
    <string name="model_num_text">Model Number:</string>
    <string name="contact_coloplast">Contact Coloplast</string>
    <string name="program">Program</string>
    <string name="lead_r_is_2000_ohms"><![CDATA[Lead R > 2000 Ω]]></string>
    <string name="electrode_tip_must_make_contact_with_the_tissue">Electrode tip must make contact with tissue</string>
    <string name="lead_r_is_250_ohms"><![CDATA[Lead R < 250 Ω]]></string>
    <string name="use_a_different_intibia_itns">Use a different Intibia ITNS</string>
    <string name="ok">OK</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="_14_day">14-day</string>
    <string name="_28_day">28-day</string>
    <string name="auto">Auto</string>
    <string name="rrt_dialogue_disc">The ITNS must be replaced soon</string>
    <string name="contact_text">Contact Coloplast</string>
    <string name="battery_voltage_1230_v">Battery Voltage: 1230 V</string>
    <string name="rrt_dialogue_title">The ITNS reached its Battery Recommended Replacement Time (RRT)</string>
    <string name="intibia_itns_rrt">ITNS Battery RRT Reached</string>
    <string name="stimulation_active">Stimulation Active</string>
    <string name="implant_reset_counter">"ITNS Reset Counter: "</string>
    <string name="_3_dash">---</string>
    <string name="_1_dash">-</string>
    <string name="amplitude_with_colon">Amplitude:</string>
    <string name="wand_and_itns_communication_issue">Wand - ITNS Comm Issue</string>
    <string name="the_communication_between_the_wand_and_the_tablet_has_been_lost">The communication between the wand and the tablet has been lost</string>
    <string name="wand_must_be_within_5_cm_2_inches_of_the_itns_pulse_generator">The wand must be within 5 cm (2 inches) of the ITNS pulse generator</string>
    <string name="the_communication_ready_when_light_on_the_wand">The communication is ready when the ITNS pulse generator icon light on the wand is steady green</string>
    <string name="tablet_and_wand_communication_issue">Tablet - Wand Comm Issue</string>
    <string name="the_communication_between_the_wand_and_itns_has_been_lost">The communication between the wand and the ITNS has been lost</string>
    <string name="resetting_date_and_time_sub_1">Resetting date and time will only change the set date and time in the Intibia App</string>
    <string name="resetting_date_and_time_sub_2">For changing the therapy date and time in the ITNS, use programming function found in the clinic visit option</string>
    <string name="test_and_set_amp">Test and Set amplitude of ITNS</string>
    <string name="set_date_and_time">Set Date and Time on the Tablet</string>
    <string name="date_no_colon">Date</string>
    <string name="time_no_colon">Time</string>
    <string name="set_day_date">Set Day/Date</string>
    <string name="set_time_for_start_of_therapy">Set time for start of therapy</string>
    <string name="tablet_battery_low">Tablet Battery Low</string>
    <string name="connect_the_tablet_to_an_external_charger">Connect the tablet to an external charger</string>
    <string name="tablet_battery_capacity_is_less_than_15">Tablet battery capacity is less than 15%</string>
    <string name="set_time">Set Time</string>
    <string name="back_to_start_screen">Back to the Start Screen?</string>
    <string name="do_you_want_to_close_app">Do you want to close the Intibia ITNS application?</string>
    <string name="set_date">Set Date</string>
    <string name="lead_r_2000_ohms"><![CDATA[Lead R > 2000 Ω]]></string>
    <string name="lead_r_colon">Lead R:</string>
    <string name="lead_i_colon">Lead I:</string>
    <string name="verify_motor_resp">1. Verify that paresthesia or motor response occur</string>
    <string name="verify_lead_r_consistent">2. Verify that the value for Lead R is consistent during repeated interrogation attempts</string>
    <string name="lead_r_is_above_normal">Lead R is above normal range</string>
    <string name="lead_r_2000"><![CDATA[Lead R > 2000 Ω]]></string>
    <string name="lead_r_n_cable_connectivity_issue">Cable Connectivity Issue</string>
    <string name="neurostimulation_was_unsuccessful">Neurostimulation was unsuccessful</string>
    <string name="check_cable">Check cable connections between the wand \n and the patient</string>
    <string name="program_itns">Program ITNS</string>
    <string name="programming_itns">Programming ITNS</string>
    <string name="the_intibia_itns_is_about_to_be_programmed">The ITNS is about to be programmed with following parameters</string>
    <string name="frequency_with_colon">Frequency:</string>
    <string name="start_day_date_with_colon">Start Day/Date:</string>
    <string name="time_with_colon">Time:</string>
    <string name="programming_unsuccessful">Programming unsuccessful</string>
    <string name="intibia_itns_reset">ITNS Reset</string>
    <string name="intibia_wrong_model">ITNS Model Number Issue</string>
    <string name="reset_counter">Reset Counter</string>
    <string name="implant_serial_number_mismatch">Serial Number Mismatch</string>
    <string name="attempting_to_program_an_implant_with_an_incorrect_serial_number">Attempting to program an ITNS with an incorrect serial number</string>
    <string name="re_interrogate_the_intibia_itns">Re-Interrogate the ITNS</string>
    <string name="ensure_wand_communicae_with_itns">Ensure the wand is communicating with the ITNS and try programming again</string>
    <string name="coloplast_corporation_addr_part_1">Coloplast Corporation \n+1-800-258-3476 \nIFU link: intibia.com/IFU</string>
    <string name="intibia_com_ifu_part_2">intibia.com/IFU</string>
    <string name="itns_interrogation_tab">ITNS Interrogation Tab</string>
    <string name="lead_r_above">Lead R is above normal range</string>
    <string name="lead_r_below">Lead R is below normal range</string>
    <string name="str_default">Default</string>
    <string name="dash">-</string>
    <string name="_2000_ohms">2000 ohms</string>
    <string name="_2_4_ma">2.4 mA</string>
    <string name="_0_ohms">0 ohms</string>
    <string name="_0_ma">0 mA</string>
    <string name="verify_sheath_position">Verify sheath position</string>
</resources>