<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cv_top_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorOrange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_warn_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_error"
            android:drawablePadding="10dp"
            android:padding="32dp"
            android:text="@string/lead_r_2000_ohms"
            android:textColor="@color/cardview_dark_background"
            android:textSize="@dimen/dialog_title"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_reset_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/lead_r_is_above_normal"
        android:textColor="@color/cardview_dark_background"
        android:textSize="@dimen/dialog_large_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_top_container" />

    <TextView
        android:id="@+id/tv_lead_r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/lead_r_colon"
        android:textColor="@color/cardview_dark_background"
        android:textSize="@dimen/dialog_small_text"
        app:layout_constraintEnd_toEndOf="@+id/tv_reset_counter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_reset_counter" />

    <TextView
        android:id="@+id/tv_lead_i"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/lead_i_colon"
        android:textColor="@color/cardview_dark_background"
        android:textSize="@dimen/dialog_small_text"
        app:layout_constraintStart_toStartOf="@+id/tv_lead_r"
        app:layout_constraintTop_toBottomOf="@+id/tv_lead_r" />

    <TextView
        android:id="@+id/tv_lead_r_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/_2000_ohms"
        android:textColor="@color/cardview_dark_background"
        android:textSize="@dimen/dialog_small_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_reset_counter"
        app:layout_constraintTop_toBottomOf="@+id/tv_reset_counter" />

    <TextView
        android:id="@+id/tv_lead_i_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_2_4_ma"
        android:textColor="@color/cardview_dark_background"
        android:textSize="@dimen/dialog_small_text"
        app:layout_constraintEnd_toEndOf="@+id/tv_lead_r_val"
        app:layout_constraintTop_toBottomOf="@+id/tv_lead_r" />

    <Button
        android:id="@+id/tv_confirm_lead"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/rounded_corners_button"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="@color/cardview_light_background"
        android:textSize="@dimen/dialog_action_buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_tip_one"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:layout_marginTop="80dp"
        android:text="@string/verify_motor_resp"
        android:textColor="@color/cardview_dark_background"
        android:textSize="@dimen/dialog_medium_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_lead_i" />

    <TextView
        android:id="@+id/tv_electrode_tip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:layout_marginTop="18dp"
        android:text="@string/verify_lead_r_consistent"
        android:textColor="@color/cardview_dark_background"
        android:textSize="@dimen/dialog_medium_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tip_one" />
</androidx.constraintlayout.widget.ConstraintLayout>