<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cv_top_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_title_height"
        android:background="@color/colorOrange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_error"
            android:layout_width="@dimen/error_icon_size"
            android:layout_height="@dimen/error_icon_size"
            android:src="@drawable/ic_error"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_warn_title"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_warn_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/lead_r_2000"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/dialog_title"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/iv_error"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <TextView
        android:id="@+id/tv_lead_r_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/lead_r_is_above_normal"
        android:textColor="@color/cardview_dark_background"
        android:textSize="@dimen/dialog_large_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_top_container" />

    <TextView
        android:id="@+id/tv_lead_r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/lead_r_colon"
        android:textColor="@color/cardview_dark_background"
        android:textSize="@dimen/dialog_medium_text"
        app:layout_constraintStart_toStartOf="@+id/guideline14"
        app:layout_constraintTop_toBottomOf="@+id/tv_lead_r_subtitle" />

    <TextView
        android:id="@+id/tv_lead_i"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/lead_i_colon"
        android:textColor="@color/cardview_dark_background"
        android:textSize="@dimen/dialog_medium_text"
        app:layout_constraintStart_toStartOf="@+id/guideline14"
        app:layout_constraintTop_toBottomOf="@+id/tv_lead_r" />

    <TextView
        android:id="@+id/tv_lead_r_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/cardview_dark_background"
        android:textSize="@dimen/dialog_medium_text"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintTop_toTopOf="@+id/tv_lead_r"
        tools:text="@string/_0_ohms" />

    <TextView
        android:id="@+id/tv_lead_i_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/cardview_dark_background"
        android:textSize="@dimen/dialog_medium_text"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintTop_toBottomOf="@+id/tv_lead_r"
        tools:text="@string/_0_ma" />

    <TextView
        android:id="@+id/tv_electrode_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/electrode_tip_must_make_contact_with_the_tissue"
        android:textColor="@color/cardview_dark_background"
        android:textSize="@dimen/dialog_medium_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_lead_i" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/verify_sheath_position"
        android:textColor="@color/cardview_dark_background"
        android:textSize="@dimen/dialog_medium_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_electrode_tip" />

    <Button
        android:id="@+id/btn_confirm_lead_r"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="18dp"
        android:background="@drawable/rounded_corners_button"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="@color/cardview_light_background"
        android:textSize="@dimen/dialog_action_buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline15"
        app:layout_constraintStart_toStartOf="@id/guideline14" />

</androidx.constraintlayout.widget.ConstraintLayout>